--- a/pom.xml
+++ b/pom.xml
@@ -58,9 +58,9 @@
 			<version>1.7.3</version>
 		</dependency>		
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<groupId>org.jukito</groupId>
+			<artifactId>jukito</artifactId>
+			<version>1.4.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
